# batocera.linux

./: .config  .dockerignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.rpi.md  Changelog  Config.in  Config.in.legacy  DEVELOPERS  Dockerfile  Makefile  README  README.md  batocera-Changelog  batocera-Changelog.md  batocera.mk  batocera.mk.template  docker.mk  external.desc  external.mk  getPoFromWebsite.sh  prek.toml  pyproject.toml  team.js
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE
board/batocera/rockchip/rk3288/patches/moonlight-embedded/: 001-disable-rockchip-rga-mpp.patch  CMakeLists.txt
package/batocera/core/batocera-configgen/configgen/: _version.py  pyproject.toml  setup.py
package/batocera/core/batocera-configgen/configgen/configgen/: Command.py  Emulator.py  Evmapy.py  GeneratorImporter.py  README.md  __init__.py  batoceraFiles.py  batoceraPaths.py  config.py  controller.py  controllersConfig.py  emulatorlauncher.py  exceptions.py  gun.py  input.py  launch.py  profiler.py  recalboxFiles.py  recalboxFilesRecalbox.py  types.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/: Generator.py  __init__.py  importer.py  nesboxGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/abuse/: abuseGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/advancemame/: advMameControllers.py  advMameGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/amiberry/: __init__.py  amiberryGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/applewin/: applewinGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/azahar/: azaharGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/bigpemu/: bigpemuGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/bstone/: bstoneGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/cannonball/: cannonballControllers.py  cannonballGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/catacombgl/: catacombglGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/cdogs/: cdogsGenerator.py
package/batocera/core/batocera-configgen/configgen/configgen/generators/cemu/: cemuControllers.py  cemuGenerator.py  cemuPaths.py
package/batocera/core/batocera-configgen/configgen/configgen/settings/: batoceraSettings.py  emulationstationSettings.py  fbaSettings.py  recalboxSettings.py  unixSettings.py
package/batocera/core/batocera-configgen/configgen/configgen/utils/: GunBorders.py  batoceraServices.py  bezels.py  buildargs.py  configparser.py  currentPlatform.py  download.py  esSettings.py  eslog.py  evmapy.py  gamescope.py  gun_borders.py  gunsUtils.py  hotkeygen.py  logger.py  metadata.py  missing.py  mounts.py  overlayfs.py  slugify.py  squashfs.py  videoMode.py  virtualmouse.py  vulkan.py  wheelsUtils.py  wine.py
package/batocera/core/batocera-scripts/src/: batocera_ascii.h  batocera_read_file.c  batocera_read_file.h  batocera_settings_get.c  batocera_settings_get.h  batocera_settings_get_main.c  batocera_settings_set.c  batocera_settings_set.h  batocera_settings_set_main.c  batocera_stringbuf.c  batocera_stringbuf.h  meson.build
package/batocera/core/batocera-scripts/src/test/: batocera-settings-test.sh  batocera-test.conf
package/batocera/emulators/sugarbox/: 001-qt6.patch  002-c++1z.patch  CMakeLists.txt  Config.in  sugarbox.mk
package/batocera/mupen64plus-gliden64/: 001-gles2.patch  CMakeLists.txt  mupen64plus-gliden64.mk
python-src/batocera-common/: pyproject.toml
python-src/batocera-common/batocera_common/: asyncio.py  configparser.py  dict.py  fs.py  paths.py  yaml.py
python-src/batocera-common/tests/: conftest.py  test_configparser.py  test_fs.py  test_yaml.py
python-src/batocera-es-system/: _version.py  pyproject.toml
python-src/batocera-es-system/batocera_es_system/: build_es_data.py  es_features.py  es_systems.py  registry.py  roms.py  shared.py  systems_report.py  translations.py
python-src/batocera-launch/: pyproject.toml
python-src/batocera-launch-fallout/: pyproject.toml
python-src/batocera-launch-fallout/batocera_launch_fallout/: base.py  fallout1.py  fallout2.py
python-src/batocera-launch-flycast/: pyproject.toml
python-src/batocera-launch-flycast/batocera_launch_flycast/: __init__.py  controllers.py  emulator.py  paths.py
python-src/batocera-launch-rpcs3/: pyproject.toml
python-src/batocera-launch-rpcs3/batocera_launch_rpcs3/: __init__.py  controllers.py  emulator.py  paths.py  sfo.py
python-src/batocera-launch-trx/: pyproject.toml
python-src/batocera-launch-trx/batocera_launch_trx/: __init__.py  trx.py
python-src/batocera-launch/batocera_launch/: __init__.py  __main__.py  asyncio.py  cli.py  command.py  dataclasses.py  emulator.py  exceptions.py  functools.py  launch.py  load.py  logging.py  paths.py  profiler.py  types.py
python-src/batocera-launch/batocera_launch/config/: config.py  defaults.py  key_value_config.py  metadata.py
python-src/batocera-launch/batocera_launch/devices/: __init__.py  controller.py  device.py  evmapy.py  gun.py  hotkeygen.py  input.py  mouse.py  video.py  wheels.py
python-src/batocera-launch/batocera_launch/draw/: bezel.py  gun_borders.py  pil.py  x11.py
python-src/batocera-launch/batocera_launch/fs/: __init__.py  overlayfs.py  squashfs.py
python-src/batocera-launch/tests/: test_dataclasses.py
python-src/batocera-test-support/: pyproject.toml
python-src/batocera-test-support/batocera_test_support/: pyfakefs_fixtures.py
python-src/hotkeygen/: hotkeygen.service  pyproject.toml
python-src/hotkeygen/conf/: common_context.conf  default_context.conf  default_mapping.conf
python-src/hotkeygen/conf/specific/: ASUS_ROG_Ally_X_Gamepad-b05-1b4c.mapping  AYN_Odin2_Gamepad-2020-3001.mapping  Steam_Deck-28de-1205.mapping
python-src/hotkeygen/hotkeygen/: hotkeygen.py  hotkeys.py  shared.py
(+21045 files in other folders)
