[project]
name = "batocera-linux"
version = "43.dev0"
requires-python = "==3.12.8"
dependencies = ["configgen", "batocera_es_system"]

[dependency-groups]
deps = [
    'pip>=25.1',

    # These versions need to be kept in sync with the versions
    # built by buildroot
    'typing-extensions==4.15.0',
    'PyYAML==6.0.2',
    'ruamel.yaml==0.18.6',
    'toml==0.10.2',
    'pillow==11.0.0',
    'configobj==5.0.8',
    'requests==2.32.3',
    'qrcode==8.0',
    'ffmpeg-python @ git+https://github.com/kkroening/ffmpeg-python.git@df129c7ba30aaa9ffffb81a48f53aa7253b0b4e6',
]
lint = [
    'ruff==0.14.14',
    'pyright[nodejs]==1.1.408',
]
dev = [
    { include-group = 'deps' },
    { include-group = 'lint' },
]

[tool.uv]
package = false

[tool.uv.sources]
configgen = { workspace = true }
batocera_es_system = { workspace = true }

[tool.uv.workspace]
members = [
    'python-src/*',
    './package/batocera/core/batocera-configgen/configgen',
]
exclude = ['python-src/stubs']

[tool.pyright]
exclude = [
    ".venv*",
    "buildroot*",
    "output",
    "dl",
    "python-src/stubs/configobj/validate.pyi",
]
stubPath = "python-src/stubs"

pythonVersion = "3.12"
pythonPlatform = "Linux"

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingModuleSource = "none"
reportDeprecated = "warning"

reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportImportCycles = "none"
enableExperimentalFeatures = true
deprecateTypingAliases = true

enableTypeIgnoreComments = false  # Force pyright: ignore comments

[tool.ruff]
extend-exclude = [".venv*", "buildroot*", "output", "dl"]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "TC", "PYI", "I", "UP", "F", "FA", "E", "W", "B", "C4", "SIM", "PTH", "G", "PERF", "PIE", "RET", "RUF"
]
ignore = ["SIM105", "SIM108", "E501", "RUF051"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions", "_typeshed"]
known-first-party = ["configgen", "batocera_es_system"]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]
