[project]
name = "batocera-linux"
version = "44.dev0"
requires-python = "==3.14.5"
dependencies = [
    "batocera-test-support",
    "batocera-common",
    "batocera-configgen",
    "batocera-es-system",
    "batocera-launch",
    "batocera-launch-flycast",
    "batocera-launch-fallout",
    "batocera-launch-rpcs3",
    "batocera-launch-trx",
]

[dependency-groups]
dev = [
    "prek==0.4.9",
    "ruff==0.15.21",
    "pyright[nodejs]==1.1.411",
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "pyfakefs==6.2.0",
    "coverage[toml]==7.15.0",
]

[tool.uv]
package = false
# These versions need to be kept in sync with the versions
# built by buildroot
constraint-dependencies = [
    "pyyaml==6.0.3",
    "configobj==5.0.8",
    "evdev==1.9.3",
    "pillow==12.0.0",
    "pysdl2==0.9.17",
    "pyudev==0.24.4",
    "qrcode==8.2",
    "requests==2.33.1",
    "ruamel.yaml==0.19.0",
    "toml==0.10.2",
    "typing-extensions==4.15.0",
    "ffmpeg-python @ git+https://github.com/kkroening/ffmpeg-python.git@df129c7ba30aaa9ffffb81a48f53aa7253b0b4e6",
]

[tool.uv.sources]
batocera-test-support = { workspace = true }
batocera-common = { workspace = true }
batocera-configgen = { workspace = true }
batocera-es-system = { workspace = true }
batocera-launch = { workspace = true }
batocera-launch-flycast = { workspace = true }
batocera-launch-fallout = { workspace = true }
batocera-launch-rpcs3 = { workspace = true }
batocera-launch-trx = { workspace = true }

[tool.uv.workspace]
members = [
    'python-src/*',
    './package/batocera/core/batocera-configgen/configgen',
]
exclude = ['python-src/stubs', 'python-src/scripts']

[tool.pytest]
minversion = "9.0"
addopts = [
    "--import-mode=importlib",
    "--cov-branch",
    "--cov-report=term",
    "--cov=batocera_common",
]
strict = true

[tool.pyright]
include = [
    "python-src",
    "package/batocera/core/batocera-configgen/configgen",
]
exclude = [
    ".venv*",
    "buildroot*",
    "output",
    "dl",
    "python-src/stubs/configobj/validate.pyi",
]
stubPath = "python-src/stubs"

pythonVersion = "3.14"
pythonPlatform = "Linux"

typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingModuleSource = "none"
reportDeprecated = "warning"

reportUnnecessaryTypeIgnoreComment = "warning"
reportPrivateUsage = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportImportCycles = "none"
enableExperimentalFeatures = true
deprecateTypingAliases = true

enableTypeIgnoreComments = false  # Force pyright: ignore comments

[[tool.pyright.executionEnvironments]]
root = 'python-src/batocera-test-support'

[[tool.pyright.executionEnvironments]]
root = 'python-src/batocera-common'

[[tool.pyright.executionEnvironments]]
root = 'python-src/batocera-es-system'

[[tool.pyright.executionEnvironments]]
root = 'python-src/batocera-launch'

[[tool.pyright.executionEnvironments]]
root = 'python-src/batocera-launch-flycast'

[[tool.pyright.executionEnvironments]]
root = 'python-src/batocera-launch-fallout'

[[tool.pyright.executionEnvironments]]
root = 'python-src/batocera-launch-rpcs3'

[[tool.pyright.executionEnvironments]]
root = 'python-src/batocera-launch-trx'

[[tool.pyright.executionEnvironments]]
# pyright doesn't allow setting typeCheckingMode per environment, so we
# set it to strict globally and disable specific reports for configgen
root = 'package/batocera/core/batocera-configgen/configgen'

reportMissingTypeStubs = "none"
reportConstantRedefinition = "none"
reportDuplicateImport = "none"
reportIncompleteStub = "none"
reportInconsistentConstructor = "none"
reportInvalidStubStatement = "none"
reportMatchNotExhaustive = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportTypeCommentUsage = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "none"
reportUnnecessaryComparison = "none"
reportUnnecessaryContains = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUntypedBaseClass = "none"
reportUntypedClassDecorator = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedNamedTuple = "none"
reportAssertAlwaysTrue = "warning"
reportInvalidStringEscapeSequence = "warning"
reportInvalidTypeVarUse = "warning"
reportSelfClsParameterName = "warning"
reportUnsupportedDunderAll = "warning"
reportUnusedExpression = "warning"
reportWildcardImportFromLibrary = "warning"

[tool.ruff]
extend-exclude = [".venv*", "buildroot*", "output", "dl"]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "TC", "PYI", "I", "UP", "F", "FA", "E", "W", "B", "C4", "SIM", "PTH", "G", "PERF", "PIE", "RET", "PT", "RUF"
]
ignore = ["SIM105", "SIM108", "E501", "RUF051"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions", "_typeshed"]
known-first-party = ["batocera_common", "batocera_launch", "configgen", "batocera_es_system"]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.zuban]
strict = true
mypy_path = ['python-src/stubs', 'python-src']

[tool.pyrefly]
project-includes = [
    "python-src",
]
project-excludes = [
    ".venv*",
    "buildroot*",
    "output",
    "dl",
    "python-src/stubs/configobj/validate.pyi",
]
python-platform = "linux"
python-version = "3.14.0"
site-package-path = ["python-src/stubs"]
infer-with-first-use = false

[tool.pyrefly.errors]
missing-source = "ignore"
deprecated = "warn"
no-access = "ignore"

[[tool.pyrefly.sub-config]]
matches = "python-src/batocera-test-support"

[[tool.pyrefly.sub-config]]
matches = "python-src/batocera-common"

[[tool.pyrefly.sub-config]]
matches = "python-src/batocera-es-system"

[[tool.pyrefly.sub-config]]
matches = "python-src/batocera-launch"

[[tool.pyrefly.sub-config]]
matches = "python-src/batocera-launch-flycast"

[[tool.pyrefly.sub-config]]
matches = "python-src/batocera-launch-fallout"

[[tool.pyrefly.sub-config]]
matches = "python-src/batocera-launch-rpcs3"

[[tool.pyrefly.sub-config]]
matches = "python-src/batocera-launch-trx"

[[tool.pyrefly.sub-config]]
matches = "package/batocera/core/batocera-configgen/configgen"

[tool.pyrefly.sub-config.errors]
untyped-import = "ignore"
implicit-any-parameter = "ignore"
implicit-any = "ignore"
invalid-type-var = "warn"
redundant-cast = "ignore"
