[project]
name = "batocera-common"
version = '44.0'
dependencies = [
    'typing-extensions',
    'PyYAML',
    'ruamel.yaml',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/batocera_common"]

[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"

target-version = "py314"

[tool.ruff.lint]
ignore = ["SIM105", "SIM108", "E501", "RUF051"]

[tool.pytest]
minversion = "9.0"
addopts = ["--import-mode=importlib", "--cov=batocera_common", "--cov-branch", "--cov-report=term"]
strict = true
