[project]
name = "batocera-launch-fallout"
version = '44.0'
dependencies = [
    'batocera-common',
    'batocera-launch',
]

[project.entry-points."batocera_launch.emulators"]
fallout1-ce = 'batocera_launch_fallout.fallout1:Fallout1'
fallout2-ce = 'batocera_launch_fallout.fallout2:Fallout2'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/batocera_launch_fallout"]

[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"
