[project]
name = "batocera-launch-flycast"
version = '44.0'
dependencies = [
    'batocera-common',
    'batocera-launch',
]

[project.entry-points."batocera_launch.emulators"]
flycast = 'batocera_launch_flycast:Flycast'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/batocera_launch_flycast"]

[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"
