[project]
name = "batocera-launch-rpcs3"
version = '44.0'
dependencies = [
    'batocera-common',
    'batocera-launch',
]

[project.entry-points."batocera_launch.emulators"]
rpcs3 = 'batocera_launch_rpcs3:RPCS3'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/batocera_launch_rpcs3"]

[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"

