[project]
name = "batocera-launch-trx"
version = '44.0'
dependencies = [
    'batocera-common',
    'batocera-launch',
]

[project.entry-points."batocera_launch.emulators"]
trx = 'batocera_launch_trx:TRX'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/batocera_launch_trx"]

[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"
