[project]
name = "batocera-launch"
version = '44.0'
dependencies = [
    'batocera-common',
]

[project.scripts]
batocera-launch = "batocera_launch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/batocera_launch"]

[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest]
minversion = "9.0"
addopts = ["--import-mode=importlib", "--cov=batocera_launch", "--cov-branch", "--cov-report=term"]
strict = true
