[project]
name = "hotkeygen"
version = '1.1'
dependencies = [
    'pyudev; sys_platform == "linux"',
    'evdev; sys_platform == "linux"',
]

[project.scripts]
hotkeygen = "hotkeygen.hotkeygen:main"
batocera-hotkeys = "hotkeygen.hotkeys:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "/hotkeygen",
]

[tool.pyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"
