[project]
name = "batocera-configgen"
version = '44.0'
dependencies = [
    'batocera-launch',
    'toml',
    'evdev; sys_platform == "linux"',
    'pyudev; sys_platform == "linux"',
    'configobj',
    'ffmpeg-python',
    'pillow',
    'requests',
    'qrcode',
    'pysdl2',
]

[project.scripts]
emulatorlauncher = "configgen.emulatorlauncher:launch"

[project.entry-points."batocera_launch.emulators"]
configgen = 'configgen.launch:Configgen'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "/configgen",
]

[tool.pyright]
extends = "../../../../../pyproject.toml"

[tool.ruff]
extend = "../../../../../pyproject.toml"
