[project]
name = "batocera-configgen"
version = '1.4'
dependencies = [
    'PyYAML',
    'toml',
    'evdev; sys_platform == "linux"',
    'pyudev; sys_platform == "linux"',
    'configobj',
    'ffmpeg-python',
    'pillow',
    'ruamel.yaml',
    'requests',
    'qrcode',
    'pysdl2',
]

[project.scripts]
emulatorlauncher = "configgen.emulatorlauncher:launch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "/configgen",
]

[tool.pyright]
extends = "../../../../../pyproject.toml"

[tool.ruff]
extend = "../../../../../pyproject.toml"
