project('batocera-scripts', 'c')
executable('batocera-settings-get', ['batocera_settings_get_main.c', 'batocera_settings_get.c', 'batocera_read_file.c'], install: true)
executable('batocera-settings-set', ['batocera_settings_set_main.c', 'batocera_settings_set.c', 'batocera_read_file.c', 'batocera_stringbuf.c'], install: true)
